--- a/style.css
+++ b/style.css
@@ -15,11 +15,16 @@ body {
     width: 100%;
 }
 
+.buttons {
+    display: flex;
+    gap: 15px;
+    justify-content: center;
+    align-items: center;
+}
+
 #resetBtn {
     margin-left: 50px;
 }
-
-
 
 .grid-container {
     display: flex;
