--- a/style.css
+++ b/style.css
@@ -9,10 +9,23 @@ body {
 
 .header {
     display: flex;
+    flex-direction: column;
     background-color: lightblue;
     justify-content: center;
     align-items: center;
     width: 100%;
+    margin-bottom: 25px;
+    padding-bottom: 25px;
+}
+
+.header-text{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.header-text h1 {
+    margin-bottom: 0;
 }
 
 .buttons {
@@ -22,22 +35,19 @@ body {
     align-items: center;
 }
 
-#resetBtn {
-    margin-left: 50px;
-}
-
 .grid-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    width: 960px;
-    height: 960px;
+    width: 700px;
+    height: 700px;
     border: 1px solid black;
     background-color: white;
     border-radius: 8px;
     padding: 0px;
     box-sizing: border-box;
+    margin-bottom: 25px;
 }
 
 .grid-square {
